force-app/main/default/objects/Treatment__c/fields/Background_Materials__c.field-meta.xml
<CustomField>
    <fullName>Background_Materials__c</fullName>
    <inlineHelpText
  >Links to call recordings and links to other client materials</inlineHelpText>
    <label>Background Materials</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>