force-app/main/default/objects/Treatment__c/fields/Client_Created_for__c.field-meta.xml
<CustomField>
    <fullName>Client_Created_for__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Created for</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Treatments</relationshipLabel>
    <relationshipName>Treatments</relationshipName>
    <type>Lookup</type>
</CustomField>