force-app/main/default/objects/Treatment__c/fields/Description_of_Request__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Request__c</fullName>
    <inlineHelpText>Description of Treatment Request</inlineHelpText>
    <label>Description of Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>