force-app/main/default/objects/Treatment__c/fields/New_Note_Update__c.field-meta.xml
<CustomField>
    <fullName>New_Note_Update__c</fullName>
    <label>Note</label>
    <type>TextArea</type>
</CustomField>