force-app/main/default/objects/Treatment__c/fields/Note_History__c.field-meta.xml
<CustomField>
    <fullName>Note_History__c</fullName>
    <label>Note History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>