force-app/main/default/objects/Treatment__c/fields/Note_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Note_Last_Updated__c</fullName>
    <description
  >Time stamp of when the Note was most recently updated.</description>
    <inlineHelpText
  >Time stamp of when the Note was most recently updated.</inlineHelpText>
    <label>Note Last Updated</label>
    <length>80</length>
    <type>Text</type>
</CustomField>