force-app/main/default/objects/Treatment__c/fields/Opportunity_Change_Log__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Change_Log__c</fullName>
    <label>Opportunity Change Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>