force-app/main/default/objects/Treatment__c/fields/Pending_Opp_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Pending_Opp_Close_Date__c</fullName>
    <formula>Pending_Opportunity__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Close Date</label>
    <type>Date</type>
</CustomField>