force-app/main/default/objects/Treatment__c/fields/Pending_Opp_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Pending_Opp_Expiration__c</fullName>
    <inlineHelpText
  >Pending Opportunity will be removed from Treatment once this date is reached.</inlineHelpText>
    <label>Pending Opp Expiration</label>
    <type>Date</type>
</CustomField>