force-app/main/default/objects/Treatment__c/fields/Pending_Opp_Owner__c.field-meta.xml
<CustomField>
    <fullName>Pending_Opp_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Treatments2</relationshipName>
    <type>Lookup</type>
</CustomField>