force-app/main/default/objects/Treatment__c/fields/Pending_Opp_Stage__c.field-meta.xml
<CustomField>
    <fullName>Pending_Opp_Stage__c</fullName>
    <formula>TEXT(Pending_Opportunity__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Stage</label>
    <type>Text</type>
</CustomField>