force-app/main/default/objects/Treatment__c/fields/Pending_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Pending_Opportunities__c</fullName>
    <inlineHelpText
  >Number of Opportunities in &quot;Pending Opp&quot; status; currently pitching Treatment.</inlineHelpText>
    <label>Pending Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity_Treatment__c.Status__c</field>
        <operation>equals</operation>
        <value>Pending Opp, Verbal</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity_Treatment__c.Treatment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>