force-app/main/default/objects/Treatment__c/fields/Pending_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Pending_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Treatments</relationshipLabel>
    <relationshipName>Treatments</relationshipName>
    <type>Lookup</type>
</CustomField>