force-app/main/default/objects/Treatment__c/fields/Pitch_Type__c.field-meta.xml
<CustomField>
    <fullName>Pitch_Type__c</fullName>
    <label>Pitch Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One Client Pitch</fullName>
            </value>
            <value>
                <fullName>Multi-Client Pitch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>