force-app/main/default/objects/Treatment__c/fields/Product_s__c.field-meta.xml
<CustomField>
    <fullName>Product_s__c</fullName>
    <label>Product(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case Study</fullName>
            </value>
            <value>
                <fullName>Custom Video</fullName>
            </value>
            <value>
                <fullName>Go-to-Guide</fullName>
            </value>
            <value>
                <fullName>Handbook</fullName>
            </value>
            <value>
                <fullName>Infographic</fullName>
            </value>
            <value>
                <fullName>Interview</fullName>
            </value>
            <value>
                <fullName>Issue Brief</fullName>
            </value>
            <value>
                <fullName>Lead-Gen Poll</fullName>
            </value>
            <value>
                <fullName>Publishable Report</fullName>
            </value>
            <value>
                <fullName>Special Report</fullName>
            </value>
            <value>
                <fullName>Sponsored Article</fullName>
            </value>
            <value>
                <fullName>Survey</fullName>
            </value>
            <value>
                <fullName>Thought Leadership Paper</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>White Paper</fullName>
            </value>
            <value>
                <fullName>Annual TLP</fullName>
                <isActive>false</isActive>
                <label>Annual TLP</label>
            </value>
            <value>
                <fullName>Custom</fullName>
                <isActive>false</isActive>
                <label>Custom</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>