force-app/main/default/objects/Treatment__c/fields/Product_Status__c.field-meta.xml
<CustomField>
    <fullName>Product_Status__c</fullName>
    <label>Product Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customizable</fullName>
                <default>true</default>
                <label>Customizable</label>
            </value>
            <value>
                <fullName>Completed / Ready</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>