force-app/main/default/objects/Treatment__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText
  >User requesting Treatment, or the user claiming an available Treatment</inlineHelpText>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Treatments3</relationshipName>
    <type>Lookup</type>
</CustomField>