force-app/main/default/objects/Treatment__c/fields/sharepoint_folder_id__c.field-meta.xml
<CustomField>
    <fullName>sharepoint_folder_id__c</fullName>
    <description
  >Id that corresponds to this object&apos;s folder Id on SharePoint.</description>
    <label>SharePoint Folder Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>