force-app/main/default/objects/Treatment__c/fields/Status_Age__c.field-meta.xml
<CustomField>
    <fullName>Status_Age__c</fullName>
    <formula>TODAY() - (Status_Date_Last_Updated__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>