force-app/main/default/objects/Treatment__c/fields/Status_Date_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Status_Date_Last_Updated__c</fullName>
    <label>Status Date Last Updated</label>
    <type>Date</type>
</CustomField>