force-app/main/default/objects/Treatment__c/fields/Suggested_Potential_Clients__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Potential_Clients__c</fullName>
    <label>Suggested Potential Clients</label>
    <type>TextArea</type>
</CustomField>