force-app/main/default/objects/Treatment__c/fields/Topic_Other__c.field-meta.xml
<CustomField>
    <fullName>Topic_Other__c</fullName>
    <inlineHelpText
  >If Topic selection is &quot;Other&quot;, list the Topic(s) here.</inlineHelpText>
    <label>Topic - Other</label>
    <type>TextArea</type>
</CustomField>