force-app/main/default/objects/Treatment__c/fields/Topics__c.field-meta.xml
<CustomField>
    <fullName>Topics__c</fullName>
    <label>Topic</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrative Services</fullName>
            </value>
            <value>
                <fullName>Advocacy and Government Affairs</fullName>
            </value>
            <value>
                <fullName>Artificial Intelligence</fullName>
            </value>
            <value>
                <fullName>Budget, Finance and HR</fullName>
            </value>
            <value>
                <fullName>Buildings and Facilities</fullName>
            </value>
            <value>
                <fullName>Citizen Engagement</fullName>
            </value>
            <value>
                <fullName>Civic Innovation</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>Constituent Experience</fullName>
            </value>
            <value>
                <fullName>Cybersecurity</fullName>
            </value>
            <value>
                <fullName>Data and Analytics</fullName>
            </value>
            <value>
                <fullName>Digital Workflows</fullName>
            </value>
            <value>
                <fullName>Diversity, Equity and Inclusion</fullName>
            </value>
            <value>
                <fullName>Election Technology</fullName>
            </value>
            <value>
                <fullName>Emergency Management</fullName>
            </value>
            <value>
                <fullName>Emerging Tech</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Grants</fullName>
            </value>
            <value>
                <fullName>Health and Human Services</fullName>
            </value>
            <value>
                <fullName>Higher Education</fullName>
            </value>
            <value>
                <fullName>IoT and Smart Cities</fullName>
            </value>
            <value>
                <fullName>IT Infrastructure</fullName>
            </value>
            <value>
                <fullName>IT Modernization</fullName>
            </value>
            <value>
                <fullName>Justice and Legal</fullName>
            </value>
            <value>
                <fullName>K-12 Education</fullName>
            </value>
            <value>
                <fullName>Law Enforcement and Fire</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Manufacturing and Retail</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>