force-app/main/default/objects/Treatment__c/fields/Topics_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Topics_of_Interest__c</fullName>
    <inlineHelpText>List Topic(s) the client is interested in</inlineHelpText>
    <label>Topics of Interest</label>
    <type>TextArea</type>
</CustomField>