force-app/main/default/objects/Treatment__c/fields/Treatment_Description__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Description__c</fullName>
    <description>Brief description of the treatment</description>
    <inlineHelpText>Brief description of the treatment</inlineHelpText>
    <label>Treatment Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>