force-app/main/default/objects/Treatment__c/fields/Treatment_Intro__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Intro__c</fullName>
    <label>Treatment Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>