force-app/main/default/objects/Treatment__c/fields/Treatment_Owner__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Treatment Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Treatments1</relationshipName>
    <type>Lookup</type>
</CustomField>