force-app/main/default/objects/Treatment__c/fields/Treatment_Request_Notes__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Request_Notes__c</fullName>
    <label>Treatment Request Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>