force-app/main/default/objects/Treatment__c/validationRules/Topic_Contains_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Topic_Contains_Other</fullName>
    <active>true</active>
    <description
  >When the Topic field includes &quot;Other&quot;, the field &quot;Topic - Other&quot; must be filled in.</description>
    <errorConditionFormula>INCLUDES(Topics__c,&quot;Other&quot;)
&amp;&amp;
ISBLANK(Topic_Other__c)</errorConditionFormula>
    <errorDisplayField>Topic_Other__c</errorDisplayField>
    <errorMessage
  >When Topic includes &quot;Other&quot;, the field &quot;Topic - Other&quot; must be filled in.</errorMessage>
</ValidationRule>