force-app/main/default/objects/Treatment__c/validationRules/Treatment_Expiration_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Treatment_Expiration_Date_Required</fullName>
    <active>false</active>
    <description
  >Treatment Expiration Date required on all Statuses except for Requested or Client Purchased</description>
    <errorConditionFormula>AND(
NOT(ISPICKVAL(Status__c,&quot;Requested&quot;)),
NOT(ISPICKVAL(Status__c,&quot;Client Purchased&quot;)),
NOT(ISPICKVAL(Status__c,&quot;Creating Treatment&quot;)),
NOT(ISPICKVAL(Status__c,&quot;Canceled&quot;))
)</errorConditionFormula>
    <errorDisplayField>Expiration_Date__c</errorDisplayField>
    <errorMessage>Treatment Expiration Date required</errorMessage>
</ValidationRule>