force-app/main/default/objects/Treatment__c/listViews/All_Treatments.listView-meta.xml
<ListView>
    <fullName>All_Treatments</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Product_Status__c</columns>
    <columns>Pitch_Type__c</columns>
    <columns>Title__c</columns>
    <columns>Type__c</columns>
    <columns>Topics__c</columns>
    <columns>Treatment_Description__c</columns>
    <columns>Suggested_Potential_Clients__c</columns>
    <columns>Treatment_Owner__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Treatments</label>
</ListView>