force-app/main/default/objects/Treatment__c/listViews/Available_Treatments.listView-meta.xml
<ListView>
    <fullName>Available_Treatments</fullName>
    <columns>NAME</columns>
    <columns>Topics__c</columns>
    <columns>Title__c</columns>
    <columns>Treatment_Description__c</columns>
    <columns>Product_s__c</columns>
    <columns>New_Note_Update__c</columns>
    <columns>Suggested_Potential_Clients__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Type__c</columns>
    <columns>Pitch_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Product_Status__c</columns>
    <columns>Treatment_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Available</value>
    </filters>
    <label>Available - All</label>
</ListView>