force-app/main/default/objects/Treatment__c/listViews/Treatments_Needs_Review.listView-meta.xml
<ListView>
    <fullName>Treatments_Needs_Review</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Pitch_Type__c</columns>
    <columns>Status_Age__c</columns>
    <columns>Title__c</columns>
    <columns>Type__c</columns>
    <columns>Treatment_Description__c</columns>
    <columns>Topics__c</columns>
    <columns>Product_s__c</columns>
    <columns>Suggested_Potential_Clients__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Treatment_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Needs Review</value>
    </filters>
    <label>Needs Review</label>
</ListView>