force-app/main/default/objects/Treatment__c/listViews/Treatments_Requested.listView-meta.xml
<ListView>
    <fullName>Treatments_Requested</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Pitch_Type__c</columns>
    <columns>Description_of_Request__c</columns>
    <columns>Topics_of_Interest__c</columns>
    <columns>Pending_Opportunity__c</columns>
    <columns>Requested_By__c</columns>
    <columns>Requested_Due_Date__c</columns>
    <columns>Treatment_Request_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Requested</value>
    </filters>
    <label>Requested</label>
</ListView>